--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body class="dark:bg-zinc-900 dark:text-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
